Change UserNfts endpoint to userDetails
